todo list copy changes

--- a/src/app/projects/html/projects.html
+++ b/src/app/projects/html/projects.html
@@ -34,8 +34,8 @@
 	            <div class="col-md-4">
 					<div class="card-container">
 						<a ui-sref="main.to-do-list">
-							<p class="card-container-header">To Do List</p>
-							<i class="card-container-logo fa fa-puzzle-piece fa-3x"></i>
+							<p class="card-container-header">Todo List</p>
+							<i class="card-container-logo fa fa-list-alt fa-3x"></i>
 						</a>
 					</div>
 				</div>
