--- a/src/app/to-do-list/html/to-do-list.html
+++ b/src/app/to-do-list/html/to-do-list.html
@@ -5,7 +5,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h1>To Do List</h1>
+						<h1>Todo List</h1>
 					</div>
 				</div>
 			</div>
@@ -37,7 +37,7 @@
 
                             <div class="edit-container">
                                 <input type="text" ng-model="item.update" ng-if="item.open" />
-                                <button ng-if="item.open" ng-click="toDoListVM.actions.updateItem(item.id, item.update)">Update</button>
+                                <button class="update-botton" ng-if="item.open" ng-click="toDoListVM.actions.updateItem(item.id, item.update)">Update</button>
                             </div>
     					</div>	
 
