added more color variables

--- a/src/app/shared/scss/_color.scss
+++ b/src/app/shared/scss/_color.scss
@@ -5,6 +5,9 @@ $primary-dark: #F4A460;
 
 $accent: #D85339;
 $accent-hover: #D75C37;
+
+$secondary-button-color: #db6c4b;
+
 $secondary-border-color: #cc4e29;
 $main-border-color: #e5aa7a;
 
