--- a/src/app/shared/scss/_button.scss
+++ b/src/app/shared/scss/_button.scss
@@ -4,8 +4,9 @@ button {
     outline: none;
     color: $primary;
     background: $primary-light;
-    border: 1px solid $primary-light;
+    border: 1px solid $main-border-color;
     font-size: 18px;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2);
 
     &:hover {
         color: $primary;
