--- a/src/app/shared/scss/_card.scss
+++ b/src/app/shared/scss/_card.scss
@@ -1,6 +1,6 @@
 .card-section {
     text-align: center;
-    padding: 120px 0;
+    padding: 88px 0;
 
     @media screen and (max-width: $screen-sm-max) {
         padding: 32px 0;
@@ -12,6 +12,10 @@
         border-radius: 5px;
         display: inline-block;
         background: $primary-light;
+        
+        margin-top: 32px;
+        margin-bottom: 32px;
+
         @include transition(all .5s ease-in-out);
 
         @include box-shadow(0 10px 6px -6px #777);
@@ -19,10 +23,6 @@
         &:hover {
             background: $accent-hover;
             transform: scale(1.1); 
-        }
-
-        @media screen and (max-width: $screen-sm-max) {
-            margin: 32px 0;
         }
     }
 
