--- a/src/app/to-do-list/scss/_to-do-list.scss
+++ b/src/app/to-do-list/scss/_to-do-list.scss
@@ -81,13 +81,17 @@
 			right: 60px;
 		}
 
-		button {
+		.update-botton {
 			vertical-align: top;
-			border: 1px solid $accent;
-			background: $accent;
+			border: 1px solid $secondary-border-color;
+			box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2);
+			background: $secondary-button-color;
 			padding: 10px 19px;
 			font-size: 14px;
 			margin-left: 12px;
+			&:hover {
+				background: $accent;
+			}
 		}
 	}
 
