reset new item to empty after add an item, and defaulted update to item name

--- a/src/app/to-do-list/html/to-do-list.html
+++ b/src/app/to-do-list/html/to-do-list.html
@@ -50,9 +50,9 @@
 	    				<div class="input-container">
 	    					<input type="text" 
                                     placeHolder="What do you want to add ?"
-                                    ng-model="toDoListVM.newItem">
+                                    ng-model="toDoListVM.data.newItem">
 	    				</div>
-	    				<button ng-click="toDoListVM.actions.addItem(toDoListVM.newItem)">Add</button>
+	    				<button ng-click="toDoListVM.actions.addItem(toDoListVM.data.newItem)">Add</button>
 	    			</div>
     			</div>
     		</div>
