added stop watch UI

--- a/src/app/projects/html/projects.html
+++ b/src/app/projects/html/projects.html
@@ -47,6 +47,14 @@
 						</a>
 					</div>
 				</div>
+				<div class="col-md-4">
+					<div class="card-container">
+						<a ui-sref="main.stop-watch">
+							<p class="card-container-header">Stop Watch</p>
+							<i class="card-container-logo fa fa-clock-o fa-3x"></i>
+						</a>
+					</div>
+				</div>
 	        </div>
 	    </div>
 	</section>
