--- a/src/main.scss
+++ b/src/main.scss
@@ -46,3 +46,4 @@
 @import "app/sudouku/scss/sudouku";
 @import "app/scramble-word/scss/scramble-word";
 @import "app/to-do-list/scss/to-do-list";
+@import "app/stop-watch/scss/stop-watch";
