--- a/src/app/to-do-list/scss/_to-do-list.scss
+++ b/src/app/to-do-list/scss/_to-do-list.scss
@@ -12,7 +12,7 @@
 	}
 
 	.list-container {
-		background: $primary-light;
+		background: $primary-dark;
 		min-height: 250px;
 		padding: 32px 0;
 		box-shadow: 0 1px 2px rgba(0, 0, 0, .5) inset, 0 1px 0 #FFF;
