--- a/src/app/stop-watch/scss/_stop-watch.scss
+++ b/src/app/stop-watch/scss/_stop-watch.scss
@@ -5,6 +5,11 @@
 		text-align: center;
 		font-size: 28px;
 		box-shadow:0 1px 2px rgba(0, 0, 0, .5) inset, 0 1px 0 #FFF;
+
+		@media screen and (max-width: $screen-xs-max) {
+			box-shadow: none;
+			margin-top: 64px;
+		}
 	}
 
 	.time { 
@@ -24,7 +29,14 @@
 		// -webkit-box-shadow:0 1px 2px rgba(0, 0, 0, .5) inset, 0 1px 0 #FFF; 
 		// -moz-box-shadow:0 1px 2px rgba(0, 0, 0, .5) inset, 0 1px 0 #FFF; 
 		// box-shadow:0 1px 2px rgba(0, 0, 0, .5) inset, 0 1px 0 #FFF;
-	
+
+		@media screen and (max-width: $screen-xs-max) {
+			font-size: 24px;
+			width: 75px;
+			height: 75px;
+			line-height: 65px;
+			margin: 0;
+		}
 	}
 
 	p {
@@ -32,11 +44,20 @@
 		font-size: 112px;
 		font-weight: 700;
 		color: #d2d2d2;
+
+		@media screen and (max-width: $screen-xs-max) {
+		font-size: 44px;
+		}
 	}
 
 	.button-container {
 		margin-bottom: 120px;
 		text-align: center;
+
+		@media screen and (max-width: $screen-xs-max) {
+			margin-bottom: 64px;
+		}
+
 		i {
 			margin: 0 32px;
 			border: 8px solid $divider;
@@ -51,6 +72,28 @@
 				background: #bdbdbd;
 				cursor: pointer;
 			}
+
+			@media screen and (max-width: $screen-xs-max) {
+				display: inline-block;
+				margin: 0 9px;
+				height: 75px;
+				width: 75px;
+				line-height: 62px;
+
+				.fa-5x {
+					font-size: 2em;
+				}
+			}
+		}
+
+		.fa {
+			font-size: 5em;
+
+			@media screen and (max-width: $screen-xs-max) {
+				font-size: 2em;
+			}
 		}
 	}
+
+
 }
