--- a/src/main.css
+++ b/src/main.css
@@ -4479,8 +4479,13 @@ button {
   text-align: center;
   font-size: 28px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5) inset, 0 1px 0 #FFF; }
+  @media screen and (max-width: 767px) {
+    /* line 2, /Users/David/Desktop/git/resume/src/app/stop-watch/scss/_stop-watch.scss */
+    .stop-watch .time-container {
+      box-shadow: none;
+      margin-top: 64px; } }
 
-/* line 10, /Users/David/Desktop/git/resume/src/app/stop-watch/scss/_stop-watch.scss */
+/* line 15, /Users/David/Desktop/git/resume/src/app/stop-watch/scss/_stop-watch.scss */
 .stop-watch .time {
   display: inline-block;
   font-size: 112px;
@@ -4495,19 +4500,35 @@ button {
   line-height: 250px;
   margin: 32px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5) inset, 0 1px 0 #FFF; }
+  @media screen and (max-width: 767px) {
+    /* line 15, /Users/David/Desktop/git/resume/src/app/stop-watch/scss/_stop-watch.scss */
+    .stop-watch .time {
+      font-size: 24px;
+      width: 75px;
+      height: 75px;
+      line-height: 65px;
+      margin: 0; } }
 
-/* line 30, /Users/David/Desktop/git/resume/src/app/stop-watch/scss/_stop-watch.scss */
+/* line 42, /Users/David/Desktop/git/resume/src/app/stop-watch/scss/_stop-watch.scss */
 .stop-watch p {
   display: inline-block;
   font-size: 112px;
   font-weight: 700;
   color: #d2d2d2; }
+  @media screen and (max-width: 767px) {
+    /* line 42, /Users/David/Desktop/git/resume/src/app/stop-watch/scss/_stop-watch.scss */
+    .stop-watch p {
+      font-size: 44px; } }
 
-/* line 37, /Users/David/Desktop/git/resume/src/app/stop-watch/scss/_stop-watch.scss */
+/* line 53, /Users/David/Desktop/git/resume/src/app/stop-watch/scss/_stop-watch.scss */
 .stop-watch .button-container {
   margin-bottom: 120px;
   text-align: center; }
-  /* line 40, /Users/David/Desktop/git/resume/src/app/stop-watch/scss/_stop-watch.scss */
+  @media screen and (max-width: 767px) {
+    /* line 53, /Users/David/Desktop/git/resume/src/app/stop-watch/scss/_stop-watch.scss */
+    .stop-watch .button-container {
+      margin-bottom: 64px; } }
+  /* line 61, /Users/David/Desktop/git/resume/src/app/stop-watch/scss/_stop-watch.scss */
   .stop-watch .button-container i {
     margin: 0 32px;
     border: 8px solid #d2d2d2;
@@ -4518,7 +4539,25 @@ button {
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5) inset, 0 1px 0 #FFF;
     background: #d2d2d2;
     color: grey; }
-    /* line 50, /Users/David/Desktop/git/resume/src/app/stop-watch/scss/_stop-watch.scss */
+    /* line 71, /Users/David/Desktop/git/resume/src/app/stop-watch/scss/_stop-watch.scss */
     .stop-watch .button-container i:hover {
       background: #bdbdbd;
       cursor: pointer; }
+    @media screen and (max-width: 767px) {
+      /* line 61, /Users/David/Desktop/git/resume/src/app/stop-watch/scss/_stop-watch.scss */
+      .stop-watch .button-container i {
+        display: inline-block;
+        margin: 0 9px;
+        height: 75px;
+        width: 75px;
+        line-height: 62px; }
+        /* line 83, /Users/David/Desktop/git/resume/src/app/stop-watch/scss/_stop-watch.scss */
+        .stop-watch .button-container i .fa-5x {
+          font-size: 2em; } }
+  /* line 89, /Users/David/Desktop/git/resume/src/app/stop-watch/scss/_stop-watch.scss */
+  .stop-watch .button-container .fa {
+    font-size: 5em; }
+    @media screen and (max-width: 767px) {
+      /* line 89, /Users/David/Desktop/git/resume/src/app/stop-watch/scss/_stop-watch.scss */
+      .stop-watch .button-container .fa {
+        font-size: 2em; } }
