--- a/src/app/to-do-list/scss/_to-do-list.scss
+++ b/src/app/to-do-list/scss/_to-do-list.scss
@@ -5,6 +5,10 @@
 		background: $primary-dark;
 		padding: 22px 0;
 
+		@media screen and (max-width: $screen-xs-max) {
+			margin-top: 64px;
+		}
+
 		h3 {
 			color: $primary;
 			font-size: 32px;
@@ -12,7 +16,7 @@
 	}
 
 	.list-container {
-		background: $primary-dark;
+		background: $primary-light;
 		min-height: 250px;
 		padding: 32px 0;
 		box-shadow: 0 1px 2px rgba(0, 0, 0, .5) inset, 0 1px 0 #FFF;
@@ -101,15 +105,27 @@
 		margin-bottom: 120px;
 		position: relative;
 
+		@media screen and (max-width: $screen-xs-max) {
+			margin-bottom: 64px;
+		}
+
 		button {
 			position: absolute;
 			right: 0;
 			top: 0;
+
+			@media screen and (max-width: $screen-xs-max) {
+				padding: 6px 10px;
+			}
 		}
 	}
 
 	.input-container {
 		padding-right: 120px;
+
+		@media screen and (max-width: $screen-xs-max) {
+			padding-right: 92px;
+		}
 
 		input {
 			width: 100%;
@@ -118,6 +134,14 @@
 			line-height: 55px;
 			text-indent: 10px;
 			outline: none;
+
+			@media screen and (max-width: $screen-xs-max) {
+				font-size: 14px;
+				text-indent: 5px;
+				height: 39px;
+				line-height: 39px;
+				border: 1px solid $divider;
+			}
 
 		}
 	}
